2017-04-05  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add option multiAllelic (default: FALSE) to support bi-/multi- allelic
	* Register native routines per CRAN policy

2017-03-23  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add back-compatiability (group by both chr:pos_ref/alt and chr:pos)

2017-02-07  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug of corner case when paring regions

2016-12-29  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug dealing with multi-allelic when loading multiple files 

2016-12-21  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve alignment for multi-allelic meta results in rvmeta.readData

2016-12-19  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add support for multi-allelic sites

2016-09-26  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add namespace std
	* Fix some compilers warnings

2016-05-04  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Revise DESCRIPTION

2016-05-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix header macro (use _DEFAULT_SOURCE)
	* Fix off-by-one bug when reporting codon number
	* Fix memory leak

2015-10-20  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve code stability

2015-09-29  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Update CITATION

2015-09-16  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Relax covariance file format restriction to accomodate rmw
	* Add feature to generate Makefiles
	
2015-08-13  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix bug when tabix file does not have headers

2015-07-23  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add function to faciliate parallel computation

2015-07-14  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Expand tilde in the file names before passing them to C

2015-06-25  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
