@@ -2,8 +2,8 @@ Package: seqminer
 Type: Package
 Title: Efficiently Read Sequence Data (VCF Format, BCF Format and METAL
         Format) into R
-Version: 5.9
-Date: 2017-04-04
+Version: 6.0
+Date: 2017-05-03
 Authors@R: c(person("Xiaowei", "Zhan", email = "zhanxw@gmail.com", role = c("aut", "cre")),
            person("Dajiang", "Liu", email = "dajiang.liu@gmail.com", role = "aut"),
            person("Attractive Chaos", email = "attractor@live.co.uk", role = "cph", comment = "We have used the following software and made minimal necessary changes: Tabix, Heng Li <lh3@live.co.uk> (MIT license). We removed standard IO related functions, e.g. printf, fprintf ; also changed its un-safe pointer arithmetics."),
@@ -18,7 +18,7 @@ Copyright: We have used the following software and made minimal
 License: GPL | file LICENSE
 URL: http://seqminer.genomic.codes
 BugReports: https://github.com/zhanxw/seqminer/issues
-Packaged: 2017-04-13 16:49:22 UTC; zhanxw
+Packaged: 2017-05-03 07:37:30 UTC; zhanxw
 Repository: CRAN
 Suggests: testthat, SKAT
 SystemRequirements: zlib headers and libraries, optionally also bzip2
@@ -33,4 +33,4 @@ Author: Xiaowei Zhan [aut, cre],
     fprintf ; also changed its un-safe pointer arithmetics.),
   Broad Institute / Massachusetts Institute of Technology [cph],
   Genome Research Ltd (GRL) [cph]
-Date/Publication: 2017-04-18 05:24:27 UTC
+Date/Publication: 2017-05-05 17:42:58 UTC
