@@ -1,10 +1,10 @@
-eee25deb56fc2bf9fb4fdb446f8a102f *ChangeLog
-94ae7187c2b15a86aa3989af97aced0f *DESCRIPTION
+d76a553dbbe5bac4a915bb881878c65c *ChangeLog
+f9fe744d25fe579536d8fc7d49c83a0c *DESCRIPTION
 50c28547d51e8cbb9a908e6696fedb86 *LICENSE
 be4102c11e1b6191f772851ad5cf50cc *NAMESPACE
 c73956e4acc00b9d651f02ae9df0b159 *R/genMakefile.R
-9809f8e093d13a78c42f76fa069867d4 *R/seqminer.R
-0b342a7ec3f315d9412630e27cd9be6d *README.md
+e290771e7a24e6e707cfdd7f9bd2dbaf *R/seqminer.R
+df46ed0e5ee9f37cd91ed4393b1101c9 *README.md
 131a236039d88977475269c6ee6c6e2c *cleanup
 f43e526f7804acf3b0fdc8f10bbbbd4c *configure
 62d8f6d197a5152ba0d05836fa2c6bf2 *configure.ac
@@ -97,7 +97,7 @@ c1e5b9652302fa94fef1dd37a934de68 *man/rvmeta.writeCovData.Rd
 af7edae2497919c1eafe809e21da775b *man/tabix.createIndex.Rd
 14360d934187e7a519081b850fdbe654 *man/tabix.createIndex.meta.Rd
 0e73bbdaeb5c30d5c809e2daa4b8fe88 *man/tabix.createIndex.vcf.Rd
-9f8958f912888ac0c16e03989547bbc4 *man/tabix.read.Rd
+94df4652e46e8e6a5edefe715ebc6091 *man/tabix.read.Rd
 e2c7b768e5f85b5a95a16a08c9def8d2 *man/tabix.read.header.Rd
 cd2237a616c220b6a53bdacc1669fb75 *man/tabix.read.table.Rd
 39669760127c150e20c3e3a93e6789d5 *man/validateAnnotationParameter.Rd
@@ -149,7 +149,7 @@ baf138407a38de43b7f6296e35271254 *src/Profiler.cpp
 23a873bc6bdc82d1307b978d141145e3 *src/R_CPP_interface.cpp
 8d19bcfed16a97b6c2a76ed8ff4332e0 *src/R_CPP_interface.h
 976c9bf0d2f8a271883f5f34cef4c2f6 *src/Range.h
-1c9bae61b61796b32e2e2ec14d63b821 *src/RangeList.cpp
+07667a728d3ff1ac3afbfd00f25fbed5 *src/RangeList.cpp
 9a48c61ffd6fa2399b7093ba3225e88e *src/RangeList.h
 923e0a3a4f281a76b3a99e70400873ef *src/Rannotation.cpp
 640a6895fe50cf13777a73d2498986ca *src/Rannotation.h
@@ -200,7 +200,7 @@ abd042e94b527d534410175167a07e4a *src/bgzf.h
 05ffa87e772c91c82b5a7f33dea80aea *src/ksort.h
 6b1b42bbbbe56cdd2bdec966f4fbc3e7 *src/kstring.c
 e6fa98213a711d4a816a9c35a0a90bdb *src/kstring.h
-3505f308d546a0d73a71d25036db45ef *src/rvMetaLoader.cpp
+f7f63377436ef809f68d5dbf75e9027e *src/rvMetaLoader.cpp
 3e282c8377c668d4e6add53c051f8610 *src/rvMetaLoader.h
 b7bfd98edaf8764867e12fcf20ce0053 *src/seqForStat.c
 96e0e2263a03a46e1d7bc0e59bb6540b *src/seqminer.c
